# old-school-ai

./: .gitignore  README.md
ai_service/: requirements.txt
ai_service/src/: dungeon_generator.py  main.py  npc_ai.py
game/: Cargo.toml
game/src/: ai_client.rs  character.rs  combat.rs  game_state.rs  main.rs  ui.rs
