[package]
name = "old-school-ai-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"  # Latest stable version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 